--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,42 +1,278 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+body{
+  margin: 0;
+  padding: 0;
+  font-family: "Poppins", sans-serif;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+#login {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  background-color: #5e5e5e;
+  height: 35px;
+  width: auto;
+  margin: 0;
+  padding: 0 10%;
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+#login img{   
+  height: 20px;
+  object-fit: contain;
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+#login a {
+  color: #ffff;
+  text-decoration: none;
+  font-weight: 500;
 }
 
-* {
-  box-sizing: border-box;
+#login a:hover{
+  text-decoration: underline;
+}
+
+nav{
+  height: 100px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0;
+  padding: 0 10%;
+}
+nav ul{
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+nav ul li{
+  cursor: pointer;
+  margin: 0 0 0 35px;
+  padding: 20px 0;
+}
+
+nav ul li span{
+  color: #000;
+  font-size: 20px;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+
+nav ul li a {
+  color: #000;
+  font-size: 20px;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+nav ul li:after{
+  content: '';
+  position: relative;
+  width: 0; 
+  height: 3px;
+  border-radius: 50px;
+  display: block;
+  margin: o;
+  padding: 0;
+  right: 0;
+  background: #008066;
+  transition: width .3s ease;
+}
+ 
+nav ul li:hover:after{
+  width: 100%;
+  left: 0;
+}
+
+nav img{
+  padding: 5px 0 0 0;
+  height: 60px;
+  width: auto;
+  border-radius: 10px;
+}
+
+#menubtn{
+  display: none;
+  height: 40%;
+  width: auto;
+}
+
+#menu{
+  background-color: #003D30;
+  color: #ffff;
+  height: auto;
+  width: auto;
+  padding: 3% 10%;
+  display: none;
+  justify-content: space-between;
+}
+
+#menu.open{
+  display: flex;
+}
+
+.menuContent{
+  margin: 0;
+  padding: 0;
+  display: block;
+  align-items: center;
+  color: #ffff; 
+}
+
+.menu ul{
+  list-style: none;
+  text-decoration: none;
   padding: 0;
   margin: 0;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.menuContent h3{
+  margin: 0;
+  padding: 0;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+.menuContent p{
+  margin: 0;
+  padding: o;
+}
+
+.menuContent ul{
+  list-style: none;
+  text-decoration: none;
+  padding: 0;
+  margin: 0;
+}
+
+.menuContent ul li{
+  padding: 10px 0;
+}
+
+.menuContent a{
+  text-decoration: none;
+  color: #e9e9e9;
+}
+
+.menuContent a:hover {
+  text-decoration: underline;
+}
+
+footer{
+  margin: 0;
+  padding: 0;
+}
+
+#footerTop{
+  background-color: #787878;
+  padding: 30px 10%;
+  display: flex;
+  justify-content: space-between;
+}
+
+#footerTop img{
+  max-height: 170px;
+  width: auto;
+  border-radius: 10px;
+}
+
+.footerContent{
+  margin: 0;
+  padding: 0;
+  display: block;
+  align-items: center;
+  color: #ffff;
+}
+
+
+.footerContent h3{
+  text-decoration: underline;
+  margin: 0;
+  padding: 0;
+}
+
+.footerContent ul{
+  list-style: none;
+  text-decoration: none;
+  padding: 0;
+  margin: 0;
+}
+
+.footerContent ul li p{
+  text-decoration: none;
+  font-weight: regular;
+  color: #e9e9e9;
+}
+
+.footerContent ul li a{
+  text-decoration: none;
+  color: #e9e9e9;
+}
+
+.footerContent ul li a :hover{
+  text-decoration: underline;
+}
+
+#footerBottom{
+  background-color: #000;
+  color: #e9e9e9;
+  margin: 0;
+  padding: 5px 10%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+@media (max-width: 900px) {
+  #login{
+      padding: 0 5%;
+  }
+
+  nav {
+      padding: 0 5%;
+  }
+  
+  #menubtn{
+      display: block;
+      font-size: 40px;
+      font-weight: bolder;
+  }
+
+  nav ul{
+      display: none;
+  }
+
+  #menu.open{
+      flex-direction: column;
+  }
+
+  #menu{
+  padding: 30px 5% 0 5%;
+  }
+
+  .menuContent{
+      margin: 0 0 30px 0;
+  }
+  
+  .container{
+      width: 100%;
+      margin: 30px 0;
+  }
+
+  #footerTop{
+      padding: 3% 5%;
+      display: block;
+      justify-content: space-between;
+  }
+
+  .footerContent{
+      margin: 0;
+      padding: 30px 0 0 0;
+  }
+
+  #footerBottom{
+      padding: 5px 5%;
   }
 }
